--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "deck.gl": "^8.8.6",
     "next": "latest",
+    "ol": "^6.15.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
