--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "d3-array": "^3.2.0",
+    "d3-scale": "^4.0.2",
     "deck.gl": "^8.8.6",
+    "maplibre-gl": "^2.3.0",
+    "maplibre-gl-opacity": "^1.4.0",
     "next": "latest",
     "ol": "^6.15.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "xml2js": "^0.4.23"
+    "react-map-gl": "^7.0.19"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
 }
