--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "d3-array": "^3.2.0",
     "d3-scale": "^4.0.2",
+    "daisyui": "^2.24.0",
     "deck.gl": "^8.8.6",
     "maplibre-gl": "^2.3.0",
     "maplibre-gl-opacity": "^1.4.0",
@@ -21,6 +22,9 @@
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.2"
   }
 }
