add empty mapbox package for vercel

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "maplibre-gl-opacity": "^1.4.0",
     "next": "latest",
     "ol": "^6.15.1",
+    "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-map-gl": "^7.0.19"
