--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "ol": "^6.15.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.19",
     "tailwind-styled-components": "^2.2.0",
-    "tailwindcss-classnames": "^3.0.6"
+    "tailwindcss-classnames": "^3.0.6",
+    "victory": "^36.6.7"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
