--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   "dependencies": {
     "d3-array": "^3.2.0",
     "d3-scale": "^4.0.2",
-    "daisyui": "^2.24.0",
-    "deck.gl": "^8.8.6",
+    "daisyui": "^2.51.5",
+    "deck.gl": "^8.9.7",
+    "eslint-config-next": "^13.3.0",
+    "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "maplibre-gl": "^2.3.0",
     "maplibre-gl-opacity": "^1.4.0",
-    "next": "latest",
+    "next": "^13.3.0",
     "ol": "^6.15.1",
-    "mapbox-gl": "npm:empty-npm-package@1.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19"
   },
   "devDependencies": {
