--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "d3-array": "^3.2.0",
     "d3-scale": "^4.0.2",
     "deck.gl": "^8.8.6",
+    "eslint-config-next": "^13.3.1",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "mapbox-gl": "npm:empty-npm-package@1.0.0",
     "maplibre-gl": "^2.3.0",
     "maplibre-gl-opacity": "^1.4.0",
-    "next": "latest",
+    "next": "^13.3.1",
     "ol": "^6.15.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.19",
